--- a/first_week.ipynb
+++ b/first_week.ipynb
@@ -20,7 +20,8 @@
     "- Python의 경우 a,b=1,2 처럼 여러 변수를 한번에 대입이 가능함\n",
     "\n",
     "               ex. Java -> int a;   a=3; \n",
-    "                   Python -> a=3\n",
+    "                   Python -> a=3\n"
+    
     "### 예약어(주의)\n",
     "<br>\n",
     "- False, None, True, and, as, assert, break, class, while,<br>\n",
