--- a/second_week.ipynb
+++ b/second_week.ipynb
@@ -16,7 +16,9 @@
    "cell_type": "code",
    "execution_count": 44,
    "id": "c7c96a13",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -80,9 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "id": "e7ae7ea4",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -107,18 +111,10 @@
       "[2, 4, 5, 8]\n",
       "[8, 5, 4, 2]\n",
       "[2, 4, 7]\n",
-      "[5, 4, 3, 2, 1]\n"
+      "[5, 4, 3, 2, 1]\n",
+      "[['a', 'b', 'c'], 1, 2, 3]\n",
+      "b\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -196,13 +192,269 @@
     "# clear\n",
     "last=[1,2,3,4,5,6]\n",
     "last.clear() #리스트 요소 삭제\n",
-    "last \n"
+    "last \n",
+    "\n",
+    "# 리스트 속의 리스트\n",
+    "a=[['a','b','c'],1,2,3]\n",
+    "print(a)\n",
+    "print(a[0][1])\n",
+    "\n",
+    "# help(list) 리스트 메소드 보기\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b459b824",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "1\n",
+      "3\n",
+      "(1, 2)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-c3dbf8d087fb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "# 튜플(tuple)\n",
+    "a=(1,2,3)\n",
+    "print(type(a))\n",
+    "\n",
+    "print(a[0])\n",
+    "print(a[2])\n",
+    "print(a[:2]) # 끝 -1\n",
+    "\n",
+    "# a[0]=5 튜플은 값 변경 x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "816befea",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3}\n",
+      "<class 'set'>\n",
+      "{1, 2, 3}\n",
+      "{1, 2, 3}\n",
+      "{1, 2, 3, 4, 5}\n",
+      "{3}\n",
+      "{1, 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 집합(set)\n",
+    "a = {1,2,3}\n",
+    "print(a)\n",
+    "print(type(a))\n",
+    "\n",
+    "# 집합은 순서가 없음\n",
+    "a={3,1,2}\n",
+    "print(a)\n",
+    "\n",
+    "# 중복 불가\n",
+    "a={1,2,3,1,2}\n",
+    "print(a)\n",
+    "\n",
+    "# 합집합\n",
+    "a={1,2,3}\n",
+    "b={3,4,5}\n",
+    "print(a|b)\n",
+    "\n",
+    "# 교집합\n",
+    "print(a&b)\n",
+    "\n",
+    "# 차집합\n",
+    "print(a-b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "205a7846",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'key1': 'a', 'key2': 'b', 'key3': 'c'}\n",
+      "<class 'dict'>\n",
+      "c\n",
+      "{'key1': 'a', 'key2': 'b', 'key3': 'c', 'key4': 'c'}\n",
+      "dict_keys(['key1', 'key2', 'key3', 'key4'])\n",
+      "dict_values(['a', 'b', 'c', 'c'])\n",
+      "dict_items([('key1', 'a'), ('key2', 'b'), ('key3', 'c'), ('key4', 'c')])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 딕셔너리(dict)\n",
+    "a={'key1':\"a\",'key2':\"b\",'key3':\"c\"}\n",
+    "print(a)\n",
+    "print(type(a))\n",
+    "print(a['key3'])\n",
+    "\n",
+    "a['key4']='c'\n",
+    "print(a)\n",
+    "\n",
+    "print(a.keys())\n",
+    "print(a.values())\n",
+    "print(a.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "ca5cfee2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'int'>\n",
+      "<class 'int'>\n",
+      "1\n",
+      "<class 'float'>\n",
+      "1.0\n",
+      "<class 'int'>\n",
+      "(1+0j)\n",
+      "<class 'complex'>\n",
+      "<class 'int'>\n",
+      "True\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 파이썬 자료형 변환\n",
+    "# 단일 자료형 변환\n",
+    "# 정수형 변환(int)\n",
+    "a = 1.0\n",
+    "print(type(a))\n",
+    "print(type(int(a)))# 단순변환 이 상태만 int\n",
+    "print(type(a))\n",
+    "\n",
+    "a=int(a)# 정수형 변환 재할당 a->int\n",
+    "print(type(a))\n",
+    "\n",
+    "# 실수형 변환\n",
+    "a=1\n",
+    "print(type(a))\n",
+    "print(a)\n",
+    "\n",
+    "a=float(a)\n",
+    "print(type(a))\n",
+    "print(a)\n",
+    "\n",
+    "# 복소수형 변환(complex)\n",
+    "a=1\n",
+    "print(type(a))\n",
+    "\n",
+    "a=complex(a)\n",
+    "print(a)\n",
+    "print(type(a))\n",
+    "\n",
+    "# int(a) 복소수->정수 불가\n",
+    "\n",
+    "# 논리형 변환(bool)\n",
+    "a=1 #0은 false\n",
+    "print(type(a))\n",
+    "a=bool(a)\n",
+    "print(a)\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b6607a71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "<class 'str'>\n",
+      "['h', 'e', 'l', 'l', 'o']\n",
+      "<class 'list'>\n",
+      "(1, 2, 3)\n",
+      "<class 'tuple'>\n",
+      "{'h', 'l', 'e', 'o'}\n",
+      "<class 'set'>\n",
+      "{1: 2, 3: 4}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 군집 자료형 변환\n",
+    "# 문자열\n",
+    "a=1\n",
+    "a=str(a)\n",
+    "print(a)\n",
+    "print(type(a))\n",
+    "\n",
+    "# 리스트 변환(list)\n",
+    "a='hello'\n",
+    "a=list(a)\n",
+    "print(a)\n",
+    "print(type(a))\n",
+    "\n",
+    "# 튜플 변환(tuple)\n",
+    "a=[1,2,3]\n",
+    "a=tuple(a)\n",
+    "print(a)\n",
+    "print(type(a))\n",
+    "\n",
+    "# 집합 변환(set)\n",
+    "a='hello'\n",
+    "a=set(a)\n",
+    "print(a)\n",
+    "print(type(a))\n",
+    "\n",
+    "# 딕셔너리 변환(dict)\n",
+    "a=[1,2,3]\n",
+    "# a=dict(a) key값의 부재\n",
+    "\n",
+    "a=[[1,2],[3,4]]\n",
+    "a=dict(a)\n",
+    "print(a)\n",
+    "print(type(a))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b459b824",
+   "id": "92901eb7",
    "metadata": {},
    "outputs": [],
    "source": []
